ui_basic.c, win32/atari_win32.c, wince/port/atari_wince.c, wince/port/main.c,
wince/port/screen_wince.cpp: rename externals to Screen_, atari_screen ->
Screen_atari, etc. move entire_screen_dirty from antic.c to screen.c, rename
Screen_EntireDirty.
* xep80.[ch]: rename ATARI_EOL -> XEP80_ATARI_EOL
* rtime.[ch], cartridge.c, ui.c: rename rtime_enabled -> RTIME_enabled


2008-06-30  Perry McFarlane  <perry_m@fastmail.fm>
* atari.c, atari_sdl.c, configure.ac, javanvm/atari800.java,
javanvm/atari_javanvm.c, pokeysnd.c, sound.h, ui.c, win32/sound.c:
add support for stereo, new sound.h function Sound_Reint on some platforms,
fixes to sdl sound, minor fixes.
* win32/sound.c: fix STEREO_SOUND undefined


2008-06-29  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: -source 1.4 to suppress javac warnings


2008-06-28  Perry McFarlane  <perry_m@fastmail.fm>
* memory.h: suppress PAGED_MEM warning


2008-06-27  Perry McFarlane  <perry_m@fastmail.fm>
* atari.c: add -basic_rom none
* Makefile.in fix javanvm variables
* util.[ch] cassette.c, configure.ac: Util_strncpy to fix javanvm bug
* INSTALL, UnixRuntime.patch, atari800.java, atari_javanvm.c: Java applet


2008-06-24  Perry McFarlane  <perry_m@fastmail.fm>
* pbi.[ch], pbi_xld.[ch], pbi_bb.[ch], pbi_mio.[ch], statesav.c: state saving
for MIO, Black Box, XLD.


2008-06-19  Perry McFarlane  <perry_m@fastmail.fm>
* ui.c, xep80.c: improve XEP80 state saving


2008-06-18  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/CREDITS, DOC/TODO, USAGE, atari.c, atari_sdl.c, configure.ac, pia.c,
platform.h, statesav.c, ui.c, xep80.[ch], xep80_fonts.[ch]:
Added XEP80 emulation by Mark Grebe to the SDL version, from Atari800MacX


2008-06-18  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c (Atari_Keyboard): recognize TAB key.
* atari_x11.c (Atari_DisplayScreen): add missing XSync call in not-SHM
part.
* ui.c, ui.h: add additional parameter to the fMessage function,